# eventd

./: .gitignore  404.html  ARCHITECTURE.md  FEATURES.md  README.md  index.html  mkdocs.yml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  feature_request.yml
.github/workflows/: ci-cd.yml  pages.yml
architecture/: index.html
cli/: Dockerfile  eventctl.py  pyproject.toml
cli/src/: main.py
cli/src/eventctl/: main.py
components/action-executor/: index.html
components/collector/: index.html
components/enrichment/: index.html
components/event-bus/: index.html
components/output/: index.html
components/rule-engine/: index.html
contributing/: index.html
core/: .dockerignore  CMakeLists.txt  Dockerfile
core/include/: engine.hpp
core/src/: main.cpp
core/tests/: test_smoke.cpp
deploy/docker/: docker-compose.yml
deploy/k8s/: README.md
deploy/systemd/: eventd-core.service
docs/: README.md  architecture.md  contributing.md  index.md
docs/components/: action-executor.md  collector.md  enrichment.md  event-bus.md  output.md  rule-engine.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
mcp/: Dockerfile  README.md  server.py
proto/: events.schema.json  rules.schema.json
scripts/: gen_rule_engine_docs.py
sdk/cpp/: README.md
sdk/js/: README.md
sdk/python/: README.md
search/: search_index.json
web/backend/: Dockerfile
web/docker/: README.md
(+7 files in other folders)
