[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eventctl"
version = "0.1.0"
description = "CLI for eventd internal monitoring stack"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
eventctl = "eventctl.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
